--- a/blog_1/index.html
+++ b/blog_1/index.html
@@ -59,6 +59,18 @@
         <img class="spark_image" src="images/spark4.jpg">
         </div>
       </p>
+      
+      <h3>Reading Level</h3>
+      <p>
+        In analyzing the reading level of the Reddit comments, we will be using the Flesch-Kincaid readability tests, and in particular we will be analyzing the grade level through the Flesch-Kincaid grade level, as defined by the following equation,
+        <div lang="latex">
+          0.39*\frac{a}{b}+11.8*\frac{c}{a}-11.59
+        </div>
+        where
+        <div lang="latex">
+          a = \mbox{total words}, b = \mbox{total sentences}, c = \mbox{total syllables}
+        </div>
+      </p>
             
         <div class="col-md-2"></div>
     </div>  
